--- a/app/templates/__layout.hbs
+++ b/app/templates/__layout.hbs
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset='utf-8'/>
-    <title>Rendr Example App</title>
+    <title>Mochitsuki</title>
 
     <link href="/styles.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
@@ -12,12 +12,11 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/">GitHub Browser</a>
+          <a class="brand" href="/">Motchituski</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="/">Home</a></li>
-              <li class="active"><a href="/repos">Repos</a></li>
-              <li class="active"><a href="/users">Users</a></li>
+              <li class="active"><a href="/rooms">Rooms</a></li>
             </ul>
           </div>
           <div class="loading-indicator">Loading&hellip;</div>
