rooms#show の htmlだけ追加した

--- a/app/templates/rooms/show.hbs
+++ b/app/templates/rooms/show.hbs
@@ -1,11 +1,11 @@
 <div class="main" style="height: 500px;">
   <div class="row">
     <div class="col-md-12">
-      <div class="room">Room: #{room_name}</div>
-      <div class="clipboard">
+      <span class="room">Room: #{room_name}</span>
+      <span class="clipboard">
         URL:
         <input type="text" value="#{room_url}">
-      </div>
+      </span>
     </div>
   </div>
   <div class="row">
@@ -15,11 +15,21 @@
     </div>
     <div class="col-md-3">
       <div id="userlist">
-        <div class="userlist-edit">
-          <i class="fa fa-edit"></i>
+        <div class="user">
+          <i class="fa fa-edit fa-3x user-edit"></i>
+          <img class="user-icon" src="http://www.placehold.it/50x50" alt="">
+          <span class="user-name">@haman29</span>
         </div>
-        <div class="userlist-icon"></div>
-        <div class="userlist-name"></div>
+        <div class="user">
+          <i class="fa fa-edit fa-3x user-edit"></i>
+          <img class="user-icon" src="http://www.placehold.it/50x50" alt="">
+          <span class="user-name">@haman29</span>
+        </div>
+        <div class="user">
+          <i class="fa fa-edit fa-3x user-edit"></i>
+          <img class="user-icon" src="http://www.placehold.it/50x50" alt="">
+          <span class="user-name">@haman29</span>
+        </div>
       </div>
       <div class="menu">
         <div class="col-md-6">
