--- a/app/templates/__layout.hbs
+++ b/app/templates/__layout.hbs
@@ -31,7 +31,14 @@
       {{{body}}}
     </section>
 
+    <script src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/components/jquery/dist/jquery.min.js"></script>
+    <script src="/components/jquery-cookie/jquery.cookie.js"></script>
+    <script src="/components/jsSHA/src/sha.js"></script>
+    <script src="/components/firebase/firebase.js"></script>
+
     <script src="/mergedAssets.js"></script>
+
     <script>
     (function() {
       var App = window.App = new (require('app/app'))({{json appData}});
