--- a/app/templates/rooms/show.hbs
+++ b/app/templates/rooms/show.hbs
@@ -32,12 +32,8 @@
         </div>
       </div>
       <div class="menu">
-        <div class="col-md-6">
-          <button>しゃべる</button>
-        </div>
-        <div class="col-md-6">
-          <button>見る(32)</button>
-        </div>
+        <button class="col-md-6"><i class="fa fa-microphone"></i></button>
+        <button class="col-md-6"><i class="fa fa-eye"></i>(<span id="viewer">32</span>)</button>
       </div>
       <div id="chatbox">
         chat
