mergeAssets.jsを先に読む、bowerで読んでいたjqueryがmergeAssetsとconflict していたのでbowerの方を削除

--- a/app/templates/__layout.hbs
+++ b/app/templates/__layout.hbs
@@ -27,17 +27,22 @@
       </div>
     </div>
 
-    <script src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/components/jquery/dist/jquery.min.js"></script>
+    <script src="/mergedAssets.js"></script>
+
     <script src="/components/jquery-cookie/jquery.cookie.js"></script>
     <script src="/components/jsSHA/src/sha.js"></script>
     <script src="/components/firebase/firebase.js"></script>
+    <script src="/components/ace-builds/src-min/ace.js"></script>
+    <script src="/components/ace-builds/src-min/mode-javascript.js"></script>
+    <script src="/components/ace-builds/src-min/theme-textmate.js"></script>
+
+    <script src="/js/firepad-userlist.js"></script>
+    <script src="/js/firepad-init.js"></script>
+    <script src="/js/common.js"></script>
 
     <section id="content" class="container">
       {{{body}}}
     </section>
-
-    <script src="/mergedAssets.js"></script>
 
     <script>
     (function() {
