bower firepad 入れた

--- a/app/templates/__layout.hbs
+++ b/app/templates/__layout.hbs
@@ -7,6 +7,7 @@
 
     <link href="/components/bootstrap/dist/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="/components/fontawesome/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="/components/firepad/dist/firepad.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="">
@@ -35,6 +36,7 @@
     <script src="/components/ace-builds/src-min/ace.js"></script>
     <script src="/components/ace-builds/src-min/mode-javascript.js"></script>
     <script src="/components/ace-builds/src-min/theme-textmate.js"></script>
+    <script src="/components/firepad/dist/firepad-min.js"></script>
 
     <script src="/js/firepad-userlist.js"></script>
     <script src="/js/firepad-init.js"></script>
